--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=20.19.4"
+  },
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.2",
