--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "20.18.0",
-    "npm": "10.2.3"
+    "node": "20.x" 
   },
   "dependencies": {
     "clsx": "^2.1.1",
