--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "20.x" 
+    "node": "20.20.0",
+    "npm": "10.8.2"
   },
   "dependencies": {
     "clsx": "^2.1.1",
