--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,3 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/health",
-      "dest": "/api/index.js"
-    }
-  ]
+  "version": 2
 }
